# web_sockets

./: Cargo.toml  README.md
core/: Cargo.toml
core/src/: code.rs  lib.rs
server/: Cargo.toml
server/src/: chat.rs  main.rs
web/: Cargo.toml  index.html  style.css
web/src/: lib.rs  socket.rs
