[package]
name = "web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
    "BinaryType",
    "Document",
    "Element",
    "ErrorEvent",
    "HtmlElement",
    "MessageEvent",
    "Node",
    "WebSocket",
    "Window",
]

[profile.release]
opt-level = "s"
lto = true
