[package]
name = "web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
core = { path = "../core" }
gloo = "0.6"
js-sys = "0.3"
once_cell = "1.10"
wasm-bindgen = "0.2"
yew = "0.19"

[dependencies.web-sys]
version = "0.3"
features = [
    "BinaryType",
    "Document",
    "Element",
    "ErrorEvent",
    "HtmlElement",
    "MessageEvent",
    "MouseEvent",
    "Node",
    "WebSocket",
    "Window",
]

[profile.release]
opt-level = "s"
lto = true
